# Athena

./: .gitignore  BOILERPLATE.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  README-Windows.md  README.md  build.ps1  docker-compose.yml  presentation-swarm.yml  presentation.ath
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  BOILERPLATE.md  DEVELOPMENT.md  DSL_REFERENCE.md  ERROR_HANDLING.md  EXAMPLES.md  FEATURES.md  INSTALLATION.md  PRESENTATION_GUIDE.md  README.md  TESTING.md
examples/: deploy.ath  development-stack.ath  event-driven.ath  fullstack-web.ath  light_presentation.ath  microservices.ath  monolithic.ath  production-ready.ath  simple-webapp.ath  swarm-production.ath  three-tier.ath
src/: lib.rs  main.rs
src/athena/: dockerfile.rs  error.rs  mod.rs
src/athena/generator/: compose.rs  defaults.rs  mod.rs
src/athena/parser/: ast.rs  grammar.pest  mod.rs  optimized_parser.rs  parser.rs
src/boilerplate/: fastapi.rs  flask.rs  go.rs  mod.rs  php.rs  templates.rs  utils.rs
src/cli/: args.rs  commands.rs  mod.rs  utils.rs
tests/: README.md  integration_tests.rs
tests/fixtures/: Dockerfile.empty_args  Dockerfile.nginx  Dockerfile.node  Dockerfile.python  build_args_basic.ath  build_args_complex.ath  build_args_invalid.ath  build_args_mixed_valid_invalid.ath  build_args_multiple_services.ath  build_args_with_image.ath  circular_dependencies.ath  comments_test.ath  invalid_syntax.ath  minimal_valid.ath  mixed_features.ath  port_conflicts.ath  swarm_advanced.ath  swarm_basic.ath  swarm_errors.ath  valid_complex_microservices.ath  valid_simple.ath
tests/integration/: boilerplate_generation_test.rs  build_args_cli_tests.rs  cli_commands_test.rs  docker_compose_generation_test.rs  enhanced_error_handling_test.rs  error_handling_test.rs  mod.rs  structural_tests.rs  swarm_features_test.rs
tests/integration/boilerplate/: common_tests.rs  fastapi_tests.rs  flask_tests.rs  go_tests.rs  laravel_tests.rs  mod.rs  symfony_tests.rs  vanilla_tests.rs
tests/integration/structural/: basic_structure.rs  comments.rs  complex_scenarios.rs  formatting.rs  mod.rs  networking.rs  policies.rs  service_configuration.rs
